# Customer-Support

./: Cargo.toml  README.md  support.db
migrations/: 20250712010441_create_users.sql  20250712010918_create_tickets.sql  20250712023525_create_internal_notes_table.sql  20250712031159_create_public_notes.sql  20250713023409_create_messages_table.sql
src/: main.rs
src/api/: auth.rs  channels.rs  mod.rs  note.rs  public_note.rs  reply.rs  ticket.rs
src/background/: email_fetcher.rs  mod.rs
src/db/: mod.rs
src/email/: imap.rs  mod.rs  smtp.rs
src/models/: internal_note.rs  message.rs  mod.rs  public_note.rs  ticket.rs  user.rs
src/utils/: jwt.rs
