[package]
name = "customer_support"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }

axum = "0.7.5"

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }

tower-http = { version = "0.5.2", features = ["cors"] }

dotenvy = "0.15.7"

uuid = { version = "1.7.0", features = ["v4"] }

time = "0.3.34"

bcrypt = "0.15.1"

jsonwebtoken = "9.2.0"

once_cell = "1.19.0"

chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = "0.3"

lettre = { version = "0.11.6", features = ["smtp-transport", "tokio1-native-tls"] }
imap = "2.3"   
native-tls = "0.2"  
mailparse = "0.14" # For parsing email content